--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,193 @@
-<p>dashboard works!</p>
+<div>
+    <!-- Dashboard -->
+    <div class="dashboard-container">
+      <ng-container>
+        <mat-card class="example-card" appearance="outlined">
+          <mat-card-content>
+            <div class="title">
+              Open Tickets
+            </div>
+            <div class="value">
+              10
+            </div>
+          </mat-card-content>
+        </mat-card>
+        <mat-card class="example-card" appearance="outlined">
+          <mat-card-content>
+            <div class="title">
+              Closed Tickets
+            </div>
+            <div class="value">
+              10
+            </div>
+          </mat-card-content>
+        </mat-card>
+        <mat-card class="example-card" appearance="outlined">
+          <mat-card-content>
+            <div class="title">
+              Unassigned Tickets
+            </div>
+            <div class="value">
+              10
+            </div>
+          </mat-card-content>
+        </mat-card>
+        <mat-card class="example-card" appearance="outlined">
+          <mat-card-content>
+            <div class="title">
+              Due Tickets
+            </div>
+            <div class="value">
+             10
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </ng-container>
+  
+    </div>
+   
+  <div class="line1">
+    <div class="chart1">
+      <mat-card class="material-card1">
+        <div class="chart-container">
+          <canvas
+            baseChart
+            [type]="'bar'"
+            [data]="barGraphData"
+            [options]="barGraphOptions"
+          ></canvas>
+        </div>
+      </mat-card>
+    </div>
+    <div class="chart1">
+      <mat-card class="material-card1">
+        <mat-card-content>
+          <div class="progress-container">
+            
+            <mat-progress-bar
+              mode="determinate"
+              [value]="progressValue"
+            ></mat-progress-bar>
+            <p>{{ progressValue }}% Complete</p>
+          </div>
+        </mat-card-content>
+        <mat-card-content>
+          <div class="progress-container">
+            
+            <mat-progress-bar
+              mode="determinate"
+              [value]="progressValue"
+            ></mat-progress-bar>
+            <p>{{ progressValue }}% Complete</p>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+  
+  <!-- line2 -->
+  <div class="line2">
+  <div>
+    <mat-card class="material-card2">
+      
+      <mat-card-content class="doughnut-flex">
+          <div class="container">
+            <!-- Progress Bar1 -->
+            <div class="progress-container">
+            
+              <mat-progress-bar
+                mode="determinate"
+                [value]="progressValue"
+              ></mat-progress-bar>
+              <p>{{ progressValue }}% Complete</p>
+            </div>
+          
+            <!-- Doughnut Chart (Circular Gauge) -->
+            <div class="gauge-container">
+              <div class="chart-wrapper">
+                <canvas
+                  baseChart
+                  [type]="'doughnut'"
+                  [data]="doughnutChartData"
+                  [options]="doughnutChartOptions"
+                ></canvas>
+                <div class="gauge-value">{{ progressValue }}%</div>
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <!-- Progress Bar2 -->
+            <div class="progress-container">
+            
+              <mat-progress-bar
+                mode="determinate"
+                [value]="progressValue"
+              ></mat-progress-bar>
+              <p>{{ progressValue }}% Complete</p>
+            </div>
+          
+            <!-- Doughnut Chart (Circular Gauge) -->
+            <div class="gauge-container">
+              <div class="chart-wrapper">
+                <canvas
+                  baseChart
+                  [type]="'doughnut'"
+                  [data]="doughnutChartData"
+                  [options]="doughnutChartOptions"
+                ></canvas>
+                <div class="gauge-value">{{ progressValue }}%</div>
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <!-- Progress Bar3 -->
+            <div class="progress-container">
+            
+              <mat-progress-bar
+                mode="determinate"
+                [value]="progressValue"
+              ></mat-progress-bar>
+              <p>{{ progressValue }}% Complete</p>
+            </div>
+          
+            <!-- Doughnut Chart (Circular Gauge) -->
+            <div class="gauge-container">
+              <div class="chart-wrapper">
+                <canvas
+                  baseChart
+                  [type]="'doughnut'"
+                  [data]="doughnutChartData"
+                  [options]="doughnutChartOptions"
+                ></canvas>
+                <div class="gauge-value">{{ progressValue }}%</div>
+              </div>
+            </div>
+          </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div>
+    <mat-card class="material-card2">
+      <!-- <mat-card-content> -->
+        <div class="chart-container">
+          <canvas
+            baseChart
+            [type]="'pie'"
+            [data]="pieChartData"
+            [options]="pieChartOptions"
+          ></canvas>
+        </div>
+      <!-- </mat-card-content> -->
+    </mat-card>
+  </div>
+  <div>
+    <mat-card class="material-card2">
+      <mat-card-content>
+        
+      </mat-card-content>
+    </mat-card>
+  </div>
+  </div>
+  
+  
+  <div>
