--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,72 +1,77 @@
-<mat-toolbar class="mat-elevation-z8 mat-menu-panel">
+<mat-toolbar>
 
-    <button mat-icon-button (click)="drawer.toggle()">
+    <button mat-icon-button (click)="drawer.toggle()" class="menu-button" *ngIf="isNavbarHidden">
         <mat-icon>menu</mat-icon>
     </button>
-    <span>Ticket Management System</span>
+
+    <span class="title">Ticket Management System</span>
+
     <span class="example-spacer"></span>
 
-    <!-- <button mat-button routerLink="/"  routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Home</button>  -->
-
-    <button mat-button routerLink="/dashboard"  routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Dashboard</button>
-
-    <button mat-button routerLink="/tickets" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Tickets</button>
-
-    <button mat-button routerLink="/users" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Users</button>
-
-    <button mat-icon-button (click)="badgeVisibility()">
+    <!-- <button mat-icon-button (click)="badgeVisibility()" class="notification-button">
         <mat-icon matBadge="16" matBadgeSize="large" [matBadgeHidden]="isBadgeVisible">notifications</mat-icon>
-    </button>
+    </button> -->
 
-    <button mat-button [matMenuTriggerFor]="setting" class="menu-button">
-        <span class="button-content">
-            <span>User</span>
-            <mat-icon>arrow_drop_down</mat-icon>
-        </span>
-    </button>
+    <ng-container *ngIf="!isNavbarHidden">
+        @if(role!=='guest'){
+            <button routerLink="/dashboard" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Dashboard</button>
+        }
+        <button routerLink="/tickets" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Tickets</button>
+        <button routerLink="/archive-tickets" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Archive</button>
+        @if(role=='admin'){
+            <button routerLink="/users" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Users</button>
+        }
 
-    <mat-menu #setting="matMenu">
-        <button mat-menu-item routerLink="/users-details">Profile</button>
-        <button mat-menu-item routerLink="">Logout</button>
-    </mat-menu>
+        <button [matMenuTriggerFor]="userMenu">
+            <span>
+                <img class="profile" src="assets/images/profile_pictures/user.jpg" alt="user">
+            </span>
+        </button>
+    
+        <mat-menu #userMenu="matMenu">
+            <button mat-menu-item (click)="logout()">
+                <mat-icon>logout</mat-icon>Logout
+            </button>
+        </mat-menu>
+    </ng-container>
+</mat-toolbar>
 
-  </mat-toolbar>
-  
-  <mat-drawer-container autosize>
-    <mat-drawer #drawer opened="false" mode="over" position="start">
+<mat-drawer-container autosize>
+    <mat-drawer #drawer [mode]="'over'" opened=false>
         <mat-nav-list>
-            <!-- <mat-list-item>
-                <button mat-button> 
-                    <mat-icon>home</mat-icon> Home
-                </button>
-            </mat-list-item> -->
-
-            <mat-list-item>
-                <button mat-button routerLink="/dashboard"> 
-                    <mat-icon>dashboard</mat-icon> Dashboard
-                </button>
-            </mat-list-item>
-            
-            <mat-list-item>
-                <button mat-button routerLink="/tickets"> 
+            @if(role!=='guest'){
+                <mat-list-item routerLinkActive="active">
+                    <button routerLink="/dashboard">
+                        <mat-icon>dashboard</mat-icon> Dashboard
+                    </button>
+                </mat-list-item>
+            }
+            <mat-list-item routerLinkActive="active">
+                <button routerLink="/tickets">
                     <mat-icon>list_alt</mat-icon> Tickets
                 </button>
             </mat-list-item>
-            <mat-list-item>
-                <button mat-button routerLink="/users"> 
-                    <mat-icon>group</mat-icon> Users
+            @if(role=='admin'){
+                <mat-list-item routerLinkActive="active">
+                    <button routerLink="/users">
+                        <mat-icon>group</mat-icon> Users
+                    </button>
+                </mat-list-item>
+            }
+            <mat-list-item routerLinkActive="active">
+                <button routerLink="/archive-tickets">
+                    <mat-icon>archive</mat-icon> Archive Tickets
                 </button>
-            </mat-list-item>  
-            <mat-list-item>
-                <button mat-button> 
-                    <mat-icon>notifications</mat-icon> Notifications
+            </mat-list-item>
+
+            <mat-list-item routerLinkActive="active">
+                <button (click)="logout()">
+                    <mat-icon>logout</mat-icon> Logout
                 </button>
             </mat-list-item>
         </mat-nav-list>
     </mat-drawer>
     <mat-drawer-content>
-        <div style="text-align: center; min-height: 600px;">
-            <router-outlet />
-        </div>
+            <router-outlet></router-outlet>
     </mat-drawer-content>
-  </mat-drawer-container>
+</mat-drawer-container>
