--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,179 @@
+@use '@angular/material' as mat;
+
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* ========== Global CSS for Mat Button ========== */
+
+:root {
+  @include mat.button-overrides((
+    filled-focus-state-layer-opacity: 0
+  ));
+}
+
+/* ========== Global CSS for Mat Snackbar ========== */
+
+/* Error Snackbar */
+.error-snackbar .mdc-snackbar__surface {
+  background-color: #d32f2f !important; 
+}
+
+.error-snackbar .mdc-snackbar__label {
+  color: white !important; 
+}
+
+/* Success Snackbar */
+.success-snackbar .mdc-snackbar__surface {
+  background-color: #43a047 !important; 
+}
+
+.success-snackbar .mdc-snackbar__label {
+  color: white !important; 
+}
+
+
+/* ========== Global CSS for Mat Menu ========== */
+.mat-mdc-menu-panel {
+    background-color: white !important;
+}
+
+/* ========== Global CSS for Mat Select ========== */
+
+.mat-mdc-select-panel {
+  background-color: white !important;
+}
+
+mat-select:first-child{
+  color: rgb(107, 105, 105) !important; 
+}
+
+
+/* ========== Global CSS for Mat Datepicker ========== */
+
+.mat-datepicker-content{
+  background-color: white !important;
+}
+
+/* ========== Global CSS for Mat Form Field ========== */
+
+:root {
+  @include mat.form-field-overrides((
+      filled-container-color: white,
+      filled-active-indicator-color: transparent,
+      filled-hover-active-indicator-color: transparent,
+      hover-state-layer-opacity: 0,
+      filled-focus-active-indicator-color: transparent
+  ));
+}
+
+.mdc-text-field{
+  background-color: white;
+}
+
+.mdc-text-field--filled{
+  border-radius: 5px !important;
+}
+
+.mdc-text-field__input {
+  color: rgb(107, 105, 105) !important; 
+}
+
+.mat-mdc-form-field .mdc-text-field__input::placeholder {
+  color: rgb(107, 105, 105) !important; 
+}
+
+/* ========== Global CSS for Mat Dialog ========== */
+
+.mat-mdc-dialog-surface{
+  background-color: #eaecf0 !important;
+  border-radius: 20px !important;
+}
+
+// Hide dialog scrollbar
+.dialog-content {
+  scrollbar-width: none;
+}
+
+/* ========== Global CSS for Status and Priority ========== */
+
+.Critical {
+  padding: 2px 10px;
+  color: #721c24;
+  border-radius: 15px;
+  display: inline-flex;
+  align-items: center;
+  background-color: #f8d7da;
+}
+  
+.High {
+  padding: 2px 10px;
+  color: #8a4f08;
+  border-radius: 15px;
+  display: inline-flex;
+  align-items: center;
+  background-color: #ffe5b4;
+}
+
+.Medium {
+  padding: 2px 10px;
+  color: #856404;
+  border-radius: 15px;
+  display: inline-flex;
+  align-items: center;
+  background-color: #fff3cd;
+}
+
+.Low {
+  padding: 2px 10px;
+  color: #155724;
+  border-radius: 15px;
+  display: inline-flex;
+  align-items: center;
+  background-color: #d4edda;
+}
+
+.Open {
+  background-color: #d4edda;
+  color: #155724;
+  display: inline-flex;
+  padding: 2px 10px;
+  border-radius: 15px;
+  align-items: center;
+}
+
+.In-Progress {
+  background-color: #fff3cd;
+  color: #856404;
+  display: inline-flex;
+  padding: 2px 10px;
+  border-radius: 15px;
+  align-items: center;
+}
+
+.Done {
+  background-color: #cce5ff;
+  color: #004085;
+  display: inline-flex;
+  padding: 2px 10px;
+  border-radius: 15px;
+  align-items: center;
+}
+
+.Closed {
+  background-color: #f8d7da;
+  color: #721c24;
+  display: inline-flex;
+  padding: 2px 10px;
+  border-radius: 15px;
+  align-items: center;
+}
+
+/* ========== Global CSS for Status and Priority ========== */
+
+.profile {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+}
